[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Game/Entity/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/Game/Entity/Player/PlayerMesh.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Game/CursorManager/MoveCursor/MoveCursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Game/Entity/Entity.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Game/Entity/Component/PlayerComponent.gd" type="Script" id=5]
[ext_resource path="res://scenes/Game/Entity/Component/WeaponComponent.gd" type="Script" id=6]
[ext_resource path="res://scenes/Game/Entity/Component/StatusComponent.gd" type="Script" id=7]
[ext_resource path="res://scenes/Game/Entity/Component/ConditionComponent.gd" type="Script" id=8]

[sub_resource type="CylinderShape" id=1]
radius = 1.1
height = 1.8

[node name="Player" type="KinematicBody"]
input_ray_pickable = false
collision_layer = 2
collision_mask = 33
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.539931, 0, 0, 0, 1, 1.06581e-14, 0, -5.79177e-15, 0.543415, 0, 1.07933, 0 )
shape = SubResource( 1 )

[node name="PlayerMesh" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )

[node name="MoveCursor" parent="." instance=ExtResource( 3 )]
visible = false

[node name="AttackDelay" type="Timer" parent="."]
one_shot = true

[node name="Entity" parent="." instance=ExtResource( 4 )]
entity_kind = 5
aabb_visual_instance_path = NodePath("../PlayerMesh/PlayerMesh")
id = 1000

[node name="PlayerComponent" type="Node" parent="Entity/Components" index="0"]
script = ExtResource( 5 )
player_name = "rocket"
guild_name = "LTU"

[node name="WeaponComponent" type="Node" parent="Entity/Components" index="1"]
script = ExtResource( 6 )
attack_delay = 0.5
projectile_speed = 45.0

[node name="StatusComponent" type="Node" parent="Entity/Components" index="2"]
script = ExtResource( 7 )

[node name="ConditionComponent" type="Node" parent="Entity/Components" index="3"]
script = ExtResource( 8 )
max_health = 100
cur_health = 90
max_mana = 120
cur_mana = 100
max_stamina = 100
cur_stamina = 100

[node name="CollisionShape" type="CollisionShape" parent="Entity/ClickBody" index="0"]
transform = Transform( 0.539931, 0, 0, 0, 1, 1.06581e-14, 0, -5.79177e-15, 0.543415, 0, 0.933055, 0 )
shape = SubResource( 1 )

[node name="Listener" type="Listener" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.66973, 0 )
current = true
[connection signal="timeout" from="AttackDelay" to="." method="_on_AttackDelay_timeout"]

[editable path="PlayerMesh"]

[editable path="Entity"]
